removed test line updated theme comments

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name:  Foundation Skeleton
 Theme URI:   https://github.com/nobleclem/foundation-skeleton
 Description: Wordpress base theme built on the Foundation Responsive Framework.
-Author:      Patrick Springstubbe
-Author URI:  http://springstubbe.us/
+Author:      U-M: Michigan Creative
+Author URI:  http://creative.umich.edu/
 Version:     1.0
 */
