--- a/styles/base.css
+++ b/styles/base.css
@@ -76,3 +76,14 @@
 img#wpstats {
     display: none;
 }
+
+/* ACCESSIBLE HIDE CLASS */
+.screen-reader-text,
+.hidden {
+    position: absolute !important;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    clip: rect(1px 1px 1px 1px);
+    clip: rect(1px, 1px, 1px, 1px);
+}
