updated comments of child template

--- a/child-theme-template/style.css
+++ b/child-theme-template/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name:     Foundation Skeleton: Child Theme
-Theme URI:      https://github.com/nobleclem/foundation-skeleton
+Theme URI:      https://github.com/umichcreative/foundation-skeleton
 Description:    A Foundation Skeleton Child Theme
-Author:         Patrick Springstubbe
-Author URI:     http://springstubbe.us
+Author:         Michigan Creative
+Author URI:     http://creative.umich.edu
 Template:       foundation-skeleton
 Version:        1.0
 */
