--- a/styles/fskeleton-debug.css
+++ b/styles/fskeleton-debug.css
@@ -62,6 +62,7 @@ body.fskelDebugGrid #fskelGridOverlay {
     top: 0;
     width: 100%;
     height: 100%;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=25)";
     opacity: 0.25;
     pointer-events: none;
     z-index: 999;
